<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/theme">

		<ListPreference
			android:title="@string/theme_title"
			android:key="@string/theme_key"
			android:summary="@string/theme_summary"
			android:entries="@array/theme_entry"
			android:entryValues="@array/theme_entry_value"
			android:defaultValue="light"/>

	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/encode">
		
		<EditTextPreference
			android:title="@string/keystore_title"
			android:key="@string/keystore_key"
			android:summary="@string/keystore_summary" />
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/decode">
		
		<CheckBoxPreference
			android:title="@string/no_debug_title"
			android:key="@string/no_debug_key"
			android:summary="@string/no_debug_summary"/>
		
		<CheckBoxPreference
			android:title="@string/keep_broken_title"
			android:key="@string/keep_broken_key"
			android:summary="@string/keep_broken_summary"/>
		
		<EditTextPreference
			android:title="@string/api_title"
			android:key="@string/api_key"
			android:summary="@string/api_summary"
			android:defaultValue="15"
			android:inputType="number"
			android:dialogTitle="@string/api_dialogTitle" />
		
    </PreferenceCategory>
	
</PreferenceScreen>
